assignment1/target/BKITParser.py
# Generated from main/bkit/parser/BKIT.g4 by ANTLR 4.8
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO




class BKITParser ( Parser ):

    grammarFileName = "BKIT.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'='", "'main'", "'Var'", "'Body'", "'Break'", 
                     "'Continue'", "'Do'", "'Else'", "'ElseIf'", "'EndBody'", 
                     "'EndIf'", "'EndFor'", "'EndWhile'", "'For'", "'Function'", 
                     "'If'", "'Parameter'", "'Return'", "'Then'", "'While'", 
                     "'EndDo'", "'+'", "'+.'", "'-'", "'-.'", "'*'", "'*.'", 
                     "'\\'", "'\\.'", "'%'", "'!'", "'&&'", "'||'", "'=='", 
                     "'!='", "'<'", "'>'", "'<='", "'>='", "'=/='", "'<.'", 
                     "'>.'", "'<=.'", "'>=.'", "';'", "':'", "'('", "')'", 
                     "'['", "']'", "'{'", "'}'", "'.'", "','" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "VAR", "BODY", 
                      "BREAK", "CONTINUE", "DO", "ELSE", "ELSEIF", "ENDBODY", 
                      "ENDIF", "ENDFOR", "ENDWHILE", "FOR", "FUNCTION", 
                      "IF", "PARAMETER", "RETURN", "THEN", "WHILE", "ENDDO", 
                      "ADD", "F_ADD", "SUB", "F_SUB", "MUL", "F_MUL", "DIV", 
                      "F_DIV", "REMAIN", "NEG", "AND", "OR", "EQ", "NOT_EQ", 
                      "LT", "GT", "LTE", "GTE", "F_NOT_EQ", "F_LT", "F_GT", 
                      "F_LTE", "F_GTE", "SEMI", "COLON", "LP", "RP", "LS", 
                      "RS", "LB", "RB", "DOT", "COMMA", "ID", "INT_LIT", 
                      "FLOAT_LIT", "BOOL_LIT", "STRING_LIT", "WS", "COMMENT", 
                      "ERROR_CHAR", "ILLEGAL_ESCAPE", "UNCLOSE_STRING", 
                      "UNTERMINATED_COMMENT" ]

    RULE_array_lit = 0
    RULE_logical_op = 1
    RULE_adding_op = 2
    RULE_multiplying_op = 3
    RULE_sign_op = 4
    RULE_argList = 5
    RULE_tailArg = 6
    RULE_expr = 7
    RULE_expr1 = 8
    RULE_expr2 = 9
    RULE_expr3 = 10
    RULE_expr4 = 11
    RULE_expr5 = 12
    RULE_expr6 = 13
    RULE_index_op = 14
    RULE_expr7 = 15
    RULE_term = 16
    RULE_program = 17
    RULE_globalVar = 18
    RULE_funcDeclPart = 19
    RULE_varDecl = 20
    RULE_varList = 21
    RULE_varInit = 22
    RULE_variable = 23
    RULE_funcDecl = 24
    RULE_paraDecl = 25
    RULE_paraList = 26
    RULE_body = 27
    RULE_mainFunc = 28
    RULE_otherStmt = 29
    RULE_assignStmt = 30
    RULE_ifStmt = 31
    RULE_forStmt = 32
    RULE_whileStmt = 33
    RULE_dowhileStmt = 34
    RULE_breakStmt = 35
    RULE_continueStmt = 36
    RULE_callStmt = 37
    RULE_returnStmt = 38
    RULE_stmtList = 39

    ruleNames =  [ "array_lit", "logical_op", "adding_op", "multiplying_op", 
                   "sign_op", "argList", "tailArg", "expr", "expr1", "expr2", 
                   "expr3", "expr4", "expr5", "expr6", "index_op", "expr7", 
                   "term", "program", "globalVar", "funcDeclPart", "varDecl", 
                   "varList", "varInit", "variable", "funcDecl", "paraDecl", 
                   "paraList", "body", "mainFunc", "otherStmt", "assignStmt", 
                   "ifStmt", "forStmt", "whileStmt", "dowhileStmt", "breakStmt", 
                   "continueStmt", "callStmt", "returnStmt", "stmtList" ]

    EOF = Token.EOF
    T__0=1
    T__1=2
    VAR=3
    BODY=4
    BREAK=5
    CONTINUE=6
    DO=7
    ELSE=8
    ELSEIF=9
    ENDBODY=10
    ENDIF=11
    ENDFOR=12
    ENDWHILE=13
    FOR=14
    FUNCTION=15
    IF=16
    PARAMETER=17
    RETURN=18
    THEN=19
    WHILE=20
    ENDDO=21
    ADD=22
    F_ADD=23
    SUB=24
    F_SUB=25
    MUL=26
    F_MUL=27
    DIV=28
    F_DIV=29
    REMAIN=30
    NEG=31
    AND=32
    OR=33
    EQ=34
    NOT_EQ=35
    LT=36
    GT=37
    LTE=38
    GTE=39
    F_NOT_EQ=40
    F_LT=41
    F_GT=42
    F_LTE=43
    F_GTE=44
    SEMI=45
    COLON=46
    LP=47
    RP=48
    LS=49
    RS=50
    LB=51
    RB=52
    DOT=53
    COMMA=54
    ID=55
    INT_LIT=56
    FLOAT_LIT=57
    BOOL_LIT=58
    STRING_LIT=59
    WS=60
    COMMENT=61
    ERROR_CHAR=62
    ILLEGAL_ESCAPE=63
    UNCLOSE_STRING=64
    UNTERMINATED_COMMENT=65

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.8")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class Array_litContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def LB(self):
            return self.getToken(BKITParser.LB, 0)

        def RB(self):
            return self.getToken(BKITParser.RB, 0)

        def BOOL_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.BOOL_LIT)
            else:
                return self.getToken(BKITParser.BOOL_LIT, i)

        def INT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.INT_LIT)
            else:
                return self.getToken(BKITParser.INT_LIT, i)

        def FLOAT_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.FLOAT_LIT)
            else:
                return self.getToken(BKITParser.FLOAT_LIT, i)

        def STRING_LIT(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.STRING_LIT)
            else:
                return self.getToken(BKITParser.STRING_LIT, i)

        def array_lit(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(BKITParser.Array_litContext)
            else:
                return self.getTypedRuleContext(BKITParser.Array_litContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(BKITParser.COMMA)
            else:
                return self.getToken(BKITParser.COMMA, i)

        def getRuleIndex(self):
            return BKITParser.RULE_array_lit

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArray_lit" ):
                return visitor.visitArray_lit(self)
            else:
                return visitor.visitChildren(self)




    def array_lit(self):

        localctx = BKITParser.Array_litContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_array_lit)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 80
            self.match(BKITParser.LB)
            self.state = 122
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [BKITParser.RB]:
                pass
            elif token in [BKITParser.BOOL_LIT]:
                self.state = 82
                self.match(BKITParser.BOOL_LIT)
                self.state = 87
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 83
                    self.match(BKITParser.COMMA)
                    self.state = 84
                    self.match(BKITParser.BOOL_LIT)
                    self.state = 89
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [BKITParser.INT_LIT]:
                self.state = 90
                self.match(BKITParser.INT_LIT)
                self.state = 95
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 91
                    self.match(BKITParser.COMMA)
                    self.state = 92
                    self.match(BKITParser.INT_LIT)
                    self.state = 97
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [BKITParser.FLOAT_LIT]:
                self.state = 98
                self.match(BKITParser.FLOAT_LIT)
                self.state = 103
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 99
                    self.match(BKITParser.COMMA)
                    self.state = 100
                    self.match(BKITParser.FLOAT_LIT)
                    self.state = 105
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [BKITParser.STRING_LIT]:
                self.state = 106
                self.match(BKITParser.STRING_LIT)
                self.state = 111
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 107
                    self.match(BKITParser.COMMA)
                    self.state = 108
                    self.match(BKITParser.STRING_LIT)
                    self.state = 113
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            elif token in [BKITParser.LB]:
                self.state = 114
                self.array_lit()
                self.state = 119
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                while _la==BKITParser.COMMA:
                    self.state = 115
                    self.match(BKITParser.COMMA)
                    self.state = 116
                    self.array_lit()
                    self.state = 121
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)

                pass
            else:
                raise NoViableAltException(self)

            self.state = 124
            self.match(BKITParser.RB)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Logical_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def AND(self):
            return self.getToken(BKITParser.AND, 0)

        def OR(self):
            return self.getToken(BKITParser.OR, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_logical_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLogical_op" ):
                return visitor.visitLogical_op(self)
            else:
                return visitor.visitChildren(self)




    def logical_op(self):

        localctx = BKITParser.Logical_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_logical_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 126
            _la = self._input.LA(1)
            if not(_la==BKITParser.AND or _la==BKITParser.OR):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Adding_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ADD(self):
            return self.getToken(BKITParser.ADD, 0)

        def F_ADD(self):
            return self.getToken(BKITParser.F_ADD, 0)

        def SUB(self):
            return self.getToken(BKITParser.SUB, 0)

        def F_SUB(self):
            return self.getToken(BKITParser.F_SUB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_adding_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAdding_op" ):
                return visitor.visitAdding_op(self)
            else:
                return visitor.visitChildren(self)




    def adding_op(self):

        localctx = BKITParser.Adding_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_adding_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 128
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.ADD) | (1 << BKITParser.F_ADD) | (1 << BKITParser.SUB) | (1 << BKITParser.F_SUB))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Multiplying_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def MUL(self):
            return self.getToken(BKITParser.MUL, 0)

        def F_MUL(self):
            return self.getToken(BKITParser.F_MUL, 0)

        def DIV(self):
            return self.getToken(BKITParser.DIV, 0)

        def F_DIV(self):
            return self.getToken(BKITParser.F_DIV, 0)

        def REMAIN(self):
            return self.getToken(BKITParser.REMAIN, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_multiplying_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiplying_op" ):
                return visitor.visitMultiplying_op(self)
            else:
                return visitor.visitChildren(self)




    def multiplying_op(self):

        localctx = BKITParser.Multiplying_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_multiplying_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.MUL) | (1 << BKITParser.F_MUL) | (1 << BKITParser.DIV) | (1 << BKITParser.F_DIV) | (1 << BKITParser.REMAIN))) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Sign_opContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SUB(self):
            return self.getToken(BKITParser.SUB, 0)

        def F_SUB(self):
            return self.getToken(BKITParser.F_SUB, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_sign_op

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSign_op" ):
                return visitor.visitSign_op(self)
            else:
                return visitor.visitChildren(self)




    def sign_op(self):

        localctx = BKITParser.Sign_opContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_sign_op)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 132
            _la = self._input.LA(1)
            if not(_la==BKITParser.SUB or _la==BKITParser.F_SUB):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ArgListContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def tailArg(self):
            return self.getTypedRuleContext(BKITParser.TailArgContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_argList

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitArgList" ):
                return visitor.visitArgList(self)
            else:
                return visitor.visitChildren(self)




    def argList(self):

        localctx = BKITParser.ArgListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_argList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << BKITParser.SUB) | (1 << BKITParser.F_SUB) | (1 << BKITParser.NEG) | (1 << BKITParser.NOT_EQ) | (1 << BKITParser.LT) | (1 << BKITParser.GT) | (1 << BKITParser.LTE) | (1 << BKITParser.GTE) | (1 << BKITParser.F_NOT_EQ) | (1 << BKITParser.F_LT) | (1 << BKITParser.F_GT) | (1 << BKITParser.F_LTE) | (1 << BKITParser.F_GTE) | (1 << BKITParser.LP) | (1 << BKITParser.LB) | (1 << BKITParser.ID) | (1 << BKITParser.INT_LIT) | (1 << BKITParser.FLOAT_LIT) | (1 << BKITParser.BOOL_LIT) | (1 << BKITParser.STRING_LIT))) != 0):
                self.state = 134
                self.expr()
                self.state = 135
                self.tailArg()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TailArgContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def COMMA(self):
            return self.getToken(BKITParser.COMMA, 0)

        def expr(self):
            return self.getTypedRuleContext(BKITParser.ExprContext,0)


        def tailArg(self):
            return self.getTypedRuleContext(BKITParser.TailArgContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_tailArg

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTailArg" ):
                return visitor.visitTailArg(self)
            else:
                return visitor.visitChildren(self)




    def tailArg(self):

        localctx = BKITParser.TailArgContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_tailArg)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 143
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==BKITParser.COMMA:
                self.state = 139
                self.match(BKITParser.COMMA)
                self.state = 140
                self.expr()
                self.state = 141
                self.tailArg()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr1(self):
            return self.getTypedRuleContext(BKITParser.Expr1Context,0)


        def EQ(self):
            return self.getToken(BKITParser.EQ, 0)

        def NOT_EQ(self):
            return self.getToken(BKITParser.NOT_EQ, 0)

        def LT(self):
            return self.getToken(BKITParser.LT, 0)

        def GT(self):
            return self.getToken(BKITParser.GT, 0)

        def LTE(self):
            return self.getToken(BKITParser.LTE, 0)

        def GTE(self):
            return self.getToken(BKITParser.GTE, 0)

        def F_NOT_EQ(self):
            return self.getToken(BKITParser.F_NOT_EQ, 0)

        def F_LT(self):
            return self.getToken(BKITParser.F_LT, 0)

        def F_GT(self):
            return self.getToken(BKITParser.F_GT, 0)

        def F_LTE(self):
            return self.getToken(BKITParser.F_LTE, 0)

        def F_GTE(self):
            return self.getToken(BKITParser.F_GTE, 0)

        def getRuleIndex(self):
            return BKITParser.RULE_expr

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr" ):
                return visitor.visitExpr(self)
            else:
                return visitor.visitChildren(self)




    def expr(self):

        localctx = BKITParser.ExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_expr)
        try:
            self.state = 160
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 145
                self.expr1(0)
                self.state = 146
                self.match(BKITParser.EQ)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 148
                self.match(BKITParser.NOT_EQ)
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 149
                self.match(BKITParser.LT)
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 150
                self.match(BKITParser.GT)
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 151
                self.match(BKITParser.LTE)
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 152
                self.match(BKITParser.GTE)
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 153
                self.match(BKITParser.F_NOT_EQ)
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 154
                self.match(BKITParser.F_LT)
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 155
                self.match(BKITParser.F_GT)
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 156
                self.match(BKITParser.F_LTE)
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 157
                self.match(BKITParser.F_GTE)
                self.state = 158
                self.expr1(0)
                pass

            elif la_ == 12:
                self.enterOuterAlt(localctx, 12)
                self.state = 159
                self.expr1(0)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr1Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr2(self):
            return self.getTypedRuleContext(BKITParser.Expr2Context,0)


        def expr1(self):
            return self.getTypedRuleContext(BKITParser.Expr1Context,0)


        def logical_op(self):
            return self.getTypedRuleContext(BKITParser.Logical_opContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expr1

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr1" ):
                return visitor.visitExpr1(self)
            else:
                return visitor.visitChildren(self)



    def expr1(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Expr1Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 16
        self.enterRecursionRule(localctx, 16, self.RULE_expr1, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 163
            self.expr2(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 171
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.Expr1Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr1)
                    self.state = 165
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")

                    self.state = 166
                    self.logical_op()
                    self.state = 167
                    self.expr2(0) 
                self.state = 173
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr2Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr3(self):
            return self.getTypedRuleContext(BKITParser.Expr3Context,0)


        def expr2(self):
            return self.getTypedRuleContext(BKITParser.Expr2Context,0)


        def adding_op(self):
            return self.getTypedRuleContext(BKITParser.Adding_opContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expr2

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr2" ):
                return visitor.visitExpr2(self)
            else:
                return visitor.visitChildren(self)



    def expr2(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = BKITParser.Expr2Context(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 18
        self.enterRecursionRule(localctx, 18, self.RULE_expr2, _p)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 175
            self.expr3(0)
            self._ctx.stop = self._input.LT(-1)
            self.state = 183
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    if self._parseListeners is not None:
                        self.triggerExitRuleEvent()
                    _prevctx = localctx
                    localctx = BKITParser.Expr2Context(self, _parentctx, _parentState)
                    self.pushNewRecursionContext(localctx, _startState, self.RULE_expr2)
                    self.state = 177
                    if not self.precpred(self._ctx, 2):
                        from antlr4.error.Errors import FailedPredicateException
                        raise FailedPredicateException(self, "self.precpred(self._ctx, 2)")

                    self.state = 178
                    self.adding_op()
                    self.state = 179
                    self.expr3(0) 
                self.state = 185
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,10,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.unrollRecursionContexts(_parentctx)
        return localctx


    class Expr3Context(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr4(self):
            return self.getTypedRuleContext(BKITParser.Expr4Context,0)


        def expr3(self):
            return self.getTypedRuleContext(BKITParser.Expr3Context,0)


        def multiplying_op(self):
            return self.getTypedRuleContext(BKITParser.Multiplying_opContext,0)


        def getRuleIndex(self):
            return BKITParser.RULE_expr3

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr3" ):
                return visitor.visitExpr3(self)
            else:
                return visitor.visitChildren(self)


